--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "cerebral-react-immutable-store": "^0.6.0",
     "expo": "^27.0.1",
+    "immutable-store": "^0.5.5",
+    "jsc-android": "^224109.0.0",
+    "json-circular-stringify": "0.0.1",
     "react": "16.3.1",
+    "react-easy-state": "^5.1.0",
     "react-native": "~0.55.2",
     "react-native-modal-datetime-picker": "^5.1.0",
     "react-navigation": "^2.5.3",
