--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-easy-state": "^5.1.0",
     "react-native": "~0.55.2",
     "react-native-modal-datetime-picker": "^5.1.0",
+    "react-native-sync-localstorage": "0.0.3",
     "react-navigation": "^2.5.3",
     "react-router-native": "^4.3.0"
   }
